<resources>
    <string name="app_name">20221119-MeghaMayani-NYCSchools</string>
    <string name="errorString">Something went wrong with the API or Please check your internet connection.</string>
    <string name="network_error">No network connection.</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="school_name">School Name :</string>
    <string name="test_tacker">Test Tacker :</string>
    <string name="reading_score">Reading Score :</string>
    <string name="math_score">Math Score :</string>
    <string name="writing_score">Writing Score :</string>
    <string name="data_not_in_list">Data is not available in list</string>
</resources>