<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SchoolSatFragment">
    <!--Data binding with layout sat data-->
    <data>

        <variable
            name="model"
            type="com.app.nycschools.model.DataNYCSchoolSat" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutSuccess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1"
                    android:textStyle="bold"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/tvSchoolName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{model.school_name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_tacker"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/num_of_sat_test_takers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{model.num_of_sat_test_takers}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reading_score"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvsat_critical_reading_avg_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{model.sat_critical_reading_avg_score}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/math_score"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvsat_math_avg_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{model.sat_math_avg_score}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writing_score"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvsat_writing_avg_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{model.sat_writing_avg_score}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_1" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layoutError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/errorString"
                android:textSize="16dp" />
        </LinearLayout>
    </FrameLayout>
</layout>